--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
@@ -31,8 +31,8 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="55*"/>
+            <RowDefinition Height="55"/>
+            <RowDefinition Height="55"/>
             <RowDefinition Height="55"/>
             <RowDefinition Height="400*"/>
         </Grid.RowDefinitions>
@@ -44,7 +44,7 @@
 
         <StackPanel Grid.Column="0" Grid.Row="1">
             <Label x:Name="labelSenderName" Content="Sender"/>
-            <TextBox x:Name="sender" IsReadOnly="True" Text="{Binding Path=SenderName, Mode=TwoWay}"/>
+            <TextBox x:Name="sender" IsReadOnly="True" Text="{Binding SenderName, Mode=TwoWay}"/>
         </StackPanel>
 
 
