added enable for DeleteButton

--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -101,7 +101,7 @@
                 </MenuItem.ItemContainerStyle>
             </MenuItem>                
 
-            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetterClick}">
+            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetterClick}" IsEnabled="{Binding Path=DeleteEnable}">
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
                 </MenuItem.Icon>
