--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
@@ -39,28 +39,27 @@
 
         <StackPanel Grid.Column="0" Grid.Row="0">
             <Label x:Name="labelTitle" Content="Title" />
-            <TextBox x:Name="title" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Title, Mode=TwoWay}"/>
+            <TextBox x:Name="title" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Title, Mode=TwoWay}" TabIndex="0"/>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="1">
             <Label x:Name="labelSenderName" Content="Sender"/>
-            <TextBox x:Name="sender" IsReadOnly="True" Text="{Binding SenderName, Mode=TwoWay}"/>
+            <TextBox x:Name="sender" IsReadOnly="True" Text="{Binding SenderName, Mode=TwoWay}" TabIndex="1"/>
         </StackPanel>
-
 
         <StackPanel Grid.Column="0" Grid.Row="3">
             <Label x:Name="labelMessage" Content="Message"/>
-            <TextBox x:Name="message" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Text, Mode=TwoWay}" Style="{StaticResource messageTextBox}" />
+            <TextBox x:Name="message" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Text, Mode=TwoWay}" Style="{StaticResource messageTextBox}" TabIndex="3"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1">
             <Label x:Name="labelDate" Content="Date" />
-            <TextBox x:Name="date" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Date, Mode=TwoWay}" Style="{StaticResource standartTextBox}" />
+            <TextBox x:Name="date" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Date, Mode=TwoWay}" Style="{StaticResource standartTextBox}" TabIndex="4"/>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="2" Grid.RowSpan="4">
             <Label x:Name="labelReceiversNames" Content="Receivers"/>
-            <local:WorkersEditorControl x:Name="workersEditorControl" />
+            <local:WorkersEditorControl x:Name="workersEditorControl" TabIndex="2"/>
         </StackPanel>
         
     </Grid>
