--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
@@ -31,7 +31,7 @@
 
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2">
 
-            <TextBox x:Name="txtWorkers" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Names}" Keyboard.PreviewKeyDown="FocusToListOfWorker">
+            <TextBox x:Name="txtWorkers" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Names}" Keyboard.PreviewKeyDown="FocusToListOfWorker" TabIndex="0">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TextChanged">
                         <i:InvokeCommandAction
