--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
@@ -29,22 +29,22 @@
 
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
             <Label x:Name="labelOtherWorkers" Content="Other workers"/>
-            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding Path=NonSelectedWorkers}" SelectedItem="{Binding Path=ReceiverForAdd}"/>
+            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding Path=NonSelectedWorkers}" SelectedItem="{Binding Path=ReceiverForAdd}" TabIndex="0"/>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3">
             <Label x:Name="labelReceivers" Content="Receivers" />
-            <ListBox x:Name="listReceivers" ItemsSource="{Binding Path=SelectedWorkers}" SelectedItem="{Binding Path=ReceiverForDelete}" Grid.RowSpan="3"/>
+            <ListBox x:Name="listReceivers" ItemsSource="{Binding Path=SelectedWorkers}" SelectedItem="{Binding Path=ReceiverForDelete}" Grid.RowSpan="3" TabIndex="2"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="1">
-            <Button x:Name="btnAdd" Content="→" Command="{Binding Path=AddReceivers}" />
-            <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" />
+            <Button x:Name="btnAdd" Content="→" Command="{Binding Path=AddReceivers}" TabIndex="1" />
+            <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" TabIndex="3"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2">
-            <Button x:Name="btnCreate" Content="Create" IsDefault="True" Click="createButton_Click"/>
-            <Button x:Name="btnCancel" Content="Cancel" IsCancel="True"/>
+            <Button x:Name="btnCreate" Content="Create" IsDefault="True" Click="createButton_Click" TabIndex="4"/>
+            <Button x:Name="btnCancel" Content="Cancel" IsCancel="True" TabIndex="5"/>
         </StackPanel>
     </Grid>
 </Window>
