--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
@@ -24,11 +24,11 @@
             <RowDefinition Height="385"/>
         </Grid.RowDefinitions>
 
-        <local:StandartLetterControl x:Name="fullContentLetterControl"  Style="{StaticResource standartControl}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3"/>
+        <local:StandartLetterControl x:Name="fullContentLetterControl"  Style="{StaticResource standartControl}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3" TabIndex="0"/>
 
         <StackPanel Grid.Column="1" Grid.Row="1" >
             <Label x:Name="lblImportanceDegree" Content="Degree of importance" />
-            <local:ImportanceDegreeEditorControl x:Name="importanceDegreeEditorControl"/>
+            <local:ImportanceDegreeEditorControl x:Name="importanceDegreeEditorControl" TabIndex="5"/>
         </StackPanel>
 
     </Grid>
