--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/InboxFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/InboxFolderControl.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="64" d:DesignWidth="232">
 
     <Grid>
-        <local:CreateFolderControl x:Name="createFolderControl" Style="{StaticResource standartControl}" />
+        <local:CreateFolderControl x:Name="createFolderControl" Style="{StaticResource standartControl}" TabIndex="0"/>
 
     </Grid>
 </UserControl>
