--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
        
         <ContentPresenter Content="{Binding }" />
-        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300">
+        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300" TabIndex="0">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="100" />
                 <DataGridHyperlinkColumn Header="SenderName" Binding="{Binding Path=SenderName}" Width="150" />
@@ -49,7 +49,7 @@
         </DataGrid>
         
         <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="529" Margin="8,27,0,0" VerticalAlignment="Top" Width="385">
-            <TreeView  x:Name="TV" ItemsSource="{Binding DirItems}" PreviewMouseRightButtonDown="tv_dep_PreviewMouseRightButtonDown" Height="546"  >
+            <TreeView  x:Name="TV" ItemsSource="{Binding DirItems}" PreviewMouseRightButtonDown="tv_dep_PreviewMouseRightButtonDown" Height="546" TabIndex="1"  >
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Items}">
                         <TextBlock Text="{Binding Name}" />
