--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Registration.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="597" Width="1300" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartWindow}"
-        Initialized="Window_Initialized" MinWidth="600" MinHeight="300">
+        Initialized="Window_Initialized" MinWidth="800" MinHeight="300">
     <Window.Resources>
 
     </Window.Resources>
@@ -16,14 +16,14 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300*" MinWidth="200"/>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="400*" MinWidth="400"/>
+            <ColumnDefinition Width="500*" MinWidth="400"/>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="500*" MinWidth="300" />
+            <ColumnDefinition Width="700*" MinWidth="300" />
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
        
         <ContentPresenter Content="{Binding }" />
-        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300" TabIndex="0">
+        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding SelectedLetter}" IsReadOnly="True" MinWidth="700" MinHeight="300" TabIndex="0">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="100" />
                 <DataGridHyperlinkColumn Header="SenderName" Binding="{Binding Path=SenderName}" Width="150" />
@@ -47,9 +47,9 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </DataGrid>
-        
-        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="529" Margin="8,27,0,0" VerticalAlignment="Top" Width="385">
-            <TreeView  x:Name="TV" ItemsSource="{Binding DirItems}" PreviewMouseRightButtonDown="TV_PreviewMouseRightButtonDown" Height="546" TabIndex="1"  >
+
+        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left"  Margin="8,27,0,0" VerticalAlignment="Top" MinHeight="500" MinWidth="800">
+            <TreeView  x:Name="TV" ItemsSource="{Binding DirItems}" PreviewMouseRightButtonDown="TV_PreviewMouseRightButtonDown" TabIndex="1" MinHeight="800" MinWidth="800" >
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Items}">
                         <TextBlock Text="{Binding Name}" />
@@ -109,7 +109,7 @@
             
         </Menu>
 
-        <ContentControl  Grid.Column="4" Content="{Binding Path=LetterPlugin}"/>
+        <ContentControl  Grid.Column="4" Content="{Binding Path=LetterPlugin}" MinWidth="700"/>
         
     </Grid>
 
