--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Registration.WPF.Views.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="544">
+             d:DesignHeight="540" d:DesignWidth="544">
     <UserControl.Resources>
         <Style TargetType="ComboBox" BasedOn="{StaticResource standartComboBox}"/>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}">
@@ -15,18 +15,17 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75*"/>
-            <ColumnDefinition Width="245"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="55"/>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="385"/>
+            <RowDefinition Height="auto" MinHeight="56"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <local:StandartLetterControl x:Name="fullContentLetterControl"  Style="{StaticResource standartControl}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3" TabIndex="0"/>
+        <local:StandartLetterControl x:Name="fullContentLetterControl"  Style="{StaticResource standartControl}" Grid.Row="1" TabIndex="0"/>
 
-        <StackPanel Grid.Column="1" Grid.Row="1" >
+        <StackPanel Grid.Row="0" >
             <Label x:Name="lblImportanceDegree" Content="Degree of importance" />
             <local:ImportanceDegreeEditorControl x:Name="importanceDegreeEditorControl" TabIndex="5"/>
         </StackPanel>
