--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
@@ -7,9 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="540" d:DesignWidth="544">
     <UserControl.Resources>
-        <Style TargetType="ComboBox" BasedOn="{StaticResource standartComboBox}"/>
+        <Style TargetType="ComboBox" BasedOn="{StaticResource standartComboBox}">
+            <Setter Property="Margin" Value="10,0,10,0"/>
+        </Style>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}">
             <Setter Property="MinWidth" Value="150"/>
+            <Setter Property="Margin" Value="8,0,8,0"/>
+        </Style>
+        <Style TargetType="local:StandartLetterControl" BasedOn="{StaticResource standartControl}">
+            <Setter Property="Margin" Value="6,0,6,0"/>
         </Style>
     </UserControl.Resources>
 
