--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
@@ -10,25 +10,32 @@
     <UserControl.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}">
             <Setter Property="MinWidth" Value="200"/>
+            <Setter Property="Margin" Value="8,0,8,0"/>
         </Style>
-        <Style TargetType="DatePicker" BasedOn="{StaticResource standartDatePicker}"/>
+        <Style TargetType="DatePicker" BasedOn="{StaticResource standartDatePicker}">
+            <Setter Property="Margin" Value="10,0,10,0"/>
+        </Style>
+
+        <Style TargetType="local:StandartLetterControl" BasedOn="{StaticResource standartControl}">
+            <Setter Property="Margin" Value="6,0,6,0"/>
+        </Style>
+
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75*"/>
-            <ColumnDefinition Width="245"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="55"/>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="385"/>
+            <RowDefinition Height="56"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <local:StandartLetterControl x:Name="fullContentLetterControl" Style="{StaticResource standartControl}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3" TabIndex="0"/>
+        <local:StandartLetterControl x:Name="fullContentLetterControl" Grid.Row="1" TabIndex="1" />
 
-        <StackPanel Grid.Row="1" Grid.Column="1">
+        <StackPanel Grid.Row="0" >
             <Label x:Name="lblDataOfResponseReq" Content="Date of response required"/>
-            <DatePicker x:Name="dataPickerLetter" IsEnabled="{Binding Path=Enable}" SelectedDate="{Binding Path=ReminderLetterData}" TabIndex="1"/>
+            <DatePicker x:Name="dataPickerLetter" IsEnabled="{Binding Path=Enable}" SelectedDate="{Binding Path=ReminderLetterData}" TabIndex="0"/>
         </StackPanel>
     </Grid>
 </UserControl>
