--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="AddWorkersFromAllWorkersListWindow" Height="304.869" Width="540.846" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
+        Title="AddWorkersFromAllWorkersListWindow" Height="305" Width="540" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
     <Window.Resources>
         <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}"/>
@@ -29,7 +29,7 @@
 
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
             <Label x:Name="labelOtherWorkers" Content="Other workers"/>
-            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding Path=NonSelectedWorkers}" SelectedItem="{Binding Path=ReceiverForAdd}" TabIndex="0"/>
+            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding NonSelectedWorkers}" SelectedItem="{Binding ReceiverForAdd}" TabIndex="0" Margin="3,0,-73,0"/>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3">
