--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/LetterWithResponseTimeControl.xaml
@@ -10,15 +10,10 @@
     <UserControl.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource standartLabel}">
             <Setter Property="MinWidth" Value="200"/>
-            <Setter Property="Margin" Value="8,0,8,0"/>
         </Style>
-        <Style TargetType="DatePicker" BasedOn="{StaticResource standartDatePicker}">
-            <Setter Property="Margin" Value="10,0,10,0"/>
-        </Style>
+        <Style TargetType="DatePicker" BasedOn="{StaticResource standartDatePicker}"/>
 
-        <Style TargetType="local:StandartLetterControl" BasedOn="{StaticResource standartControl}">
-            <Setter Property="Margin" Value="6,0,6,0"/>
-        </Style>
+        <Style TargetType="local:StandartLetterControl" BasedOn="{StaticResource standartControl}"/>
 
     </UserControl.Resources>
     <Grid>
